@@ -1,3 +1,8 @@
+version <unreleased>
+
+Fixed/improved extractors
+- [bloomberg] Support another form of player (#10187)
+
 version 2016.07.30
 
 Fixed/improved extractors
